<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo et Titre côte à côte -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="176dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/logo_de_l_application"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toStartOf="@+id/appTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/just_me_again_down_here"
                android:gravity="center_vertical"
                android:shadowColor="#000000"
                android:shadowDx="7"
                android:shadowDy="7"
                android:shadowRadius="4"
                android:text="@string/dini_m3ak"
                android:textColor="#F39313"
                android:textSize="55sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backButton4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/goback"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toTopOf="@+id/logoImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Titre formulaire -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/formulaire_d_inscription"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Nom & Prénom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:autofillHints="familyName"
                android:background="@drawable/edittext_background"
                android:hint="@string/votre_nom"
                android:inputType="textPersonName"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />

            <Space
                android:layout_width="8dp"
                android:layout_height="58dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:autofillHints="givenName"
                android:background="@drawable/edittext_background"
                android:hint="@string/votre_pr_nom"
                android:inputType="textPersonName"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rassure_toi_qu_il_correspond_ta_cin"
            android:textColor="#757575"
            android:textSize="12sp" />

        <!-- Date de naissance -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_de_naissance"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="datetime|date"
            android:padding="10dp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/usermail_gmail_com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Genre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genre"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_homme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/homme" />

            <RadioButton
                android:id="@+id/radio_femme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/femme" />
        </LinearLayout>

        <!-- Numéro de téléphone -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quel_est_votre_num_ro"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:gravity="center"
                app:ccp_defaultNameCode="MA"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:maxWidth="488dp"
                android:autofillHints="phone"
                android:background="@drawable/edittext_background"
                android:hint="@string/_0_00_00_00_00"
                android:inputType="phone"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <!-- Bouton Continuer -->
        <Button
            android:id="@+id/btnContinuer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:background="@drawable/orange_button"
            android:gravity="center"
            android:maxWidth="488dp"
            android:text="@string/continuer"
            android:textColor="#616161"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
